--- a/sample/src/sample-runner.html
+++ b/sample/src/sample-runner.html
@@ -7,42 +7,41 @@
             </div>
         </collapse-panel>
         <collapse-panel title="Code Preview">
+            <div id="codepreview" ej-tab>
+                <ul ej-tab>
+                    <li show.bind="sample.html"><a href="#html">HTML</a></li>
+                    <li show.bind="sample.js"><a href="#javascript">Javascript</a></li>
+                    <li show.bind="sample.css"><a href="#css">CSS</a></li>
+                    <li show.bind="sample.json"><a href="#json">JSON</a></li>
+                    <li show.bind="sample.md"><a href="#md">Documentation</a></li>
 
-            <ul class="nav nav-tabs">
-                <li class="active" show.bind="sample.html"><a data-toggle="tab" href="#html">HTML</a></li>
-                <li show.bind="sample.js"><a data-toggle="tab" href="#javascript">Javascript</a></li>
-                <li show.bind="sample.css"><a data-toggle="tab" href="#css">CSS</a></li>
-                <li show.bind="sample.json"><a data-toggle="tab" href="#json">JSON</a></li>
-                <li show.bind="sample.md"><a data-toggle="tab" href="#md">Documentation</a></li>
-            </ul>
+                    <div id="html">
+                        <au-code language="markup" url.bind="sample.html">
+                        </au-code>
+                    </div>
 
-            <div class="tab-content">
-                <div class="tab-pane active fade in" id="html">
-                    <au-code language="markup" url.bind="sample.html">
-                    </au-code>
-                </div>
+                    <div id="javascript">
+                        <au-code language="javascript" url.bind="sample.js">
+                        </au-code>
+                    </div>
 
-                <div class="tab-pane fade" id="javascript">
-                    <au-code language="javascript" url.bind="sample.js">
-                    </au-code>
-                </div>
+                    <div id="css">
+                        <au-code language="css" url.bind="sample.css">
+                        </au-code>
+                    </div>
 
-                <div class="tab-pane fade" id="css">
-                    <au-code language="css" url.bind="sample.css">
-                    </au-code>
-                </div>
+                    <div id="json">
+                        <au-code language="javascript" url.bind="sample.json">
+                        </au-code>
+                    </div>
 
-                <div class="tab-pane fade" id="json">
-                    <au-code language="javascript" url.bind="sample.json">
-                    </au-code>
-                </div>
+                    <div class="tab-pane fade" id="md">
+                        <au-markdown url.bind="sample.md">
+                        </au-markdown>
+                    </div>
 
-                <div class="tab-pane fade" id="md">
-                    <au-markdown url.bind="sample.md">
-                    </au-markdown>
-                </div>
+                </ul>
             </div>
-
         </collapse-panel>
     </section>
 </template>
