Bridge source changes test cases  and layout changes
Changes in the core files and testcases  revamp for util and template
classes and layout changes

--- a/sample/src/sample-runner.html
+++ b/sample/src/sample-runner.html
@@ -2,6 +2,9 @@
     <section>
 
         <collapse-panel title.bind="sample.title">
+         <div class="buttons" style="display: inline;float: right;">
+            <a href.bind="sample.documentation" style="text-decoration:none"  target="_blank" ej-button="ej-height:20">API</a>
+          </div>
             <div id="exampleWrap">
                 <compose view-model.bind="sample.path"></compose>
             </div>
@@ -14,7 +17,6 @@
                     <li show.bind="sample.css"><a href="#css">CSS</a></li>
                     <li show.bind="sample.json"><a href="#json">JSON</a></li>
                     <li show.bind="sample.md"><a href="#md">Documentation</a></li>
-
                     <div id="html">
                         <au-code language="markup" url.bind="sample.html">
                         </au-code>
