--- a/sample/src/shared/showcase.html
+++ b/sample/src/shared/showcase.html
@@ -4,10 +4,10 @@
         <br>
         <h3>${ router.title }</h3>
         <div>
-            <div class="col-md-2">
-                <ul b-navs="b-style:pills; b-stacked.bind:true">
-                    <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
-                        <a href.bind="row.href">${row.title}</a>
+            <div class="col-md-2" style="padding-left:0">
+                <ul id="list" ej-list-box="ej-width:100%;ej-selected-index:0 ">
+                    <li repeat.for="row of router.navigation" click.delegate="router.navigate(row.href)" >
+                        <span> ${row.title}</span>
                     </li>
                 </ul>
             </div>
