Menu Layout changes
Layout changes for navbar menu

--- a/sample/src/app.html
+++ b/sample/src/app.html
@@ -1,10 +1,8 @@
 <template>
     <require from="bootstrap/css/bootstrap.css"></require>
     <require from='./nav-bar'></require>
-
-
+    <link href="src/root/vendors/styles/web/bootstrap-theme/ej.web.all.min.css" rel="stylesheet" />
     <nav-bar router.bind="router"></nav-bar>
-
     <div class="page-host">
         <router-view></router-view>
     </div>
