--- a/sample/src/samples/tab/basic-use.html
+++ b/sample/src/samples/tab/basic-use.html
@@ -1,6 +1,7 @@
 <template>
+    <require from="./basic-use.css"></require>
     <div class="cols-sample-area">
-        <div id="defaultTab" style="width: 500px" ej-tab>
+        <ej-tab id="defaultTab" style="width: 500px" >
             <ul>
                 <li><a href="#steelman">Man of Steel</a></li>
                 <li><a href="#woldwar">World War Z</a></li>
@@ -63,6 +64,6 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </ej-tab>
     </div>
 </template>
