chore(all):v15.4.0.17 assets committed

--- a/sample/src/samples/slider/vertical.html
+++ b/sample/src/samples/slider/vertical.html
@@ -1,6 +1,6 @@
 <template>
      <require from="./Vertical.css"></require>
-    <div class="frame">
+    <div id="frame" class="frame">
        <div class="control">
         <div id="slider" ej-slider="e-orientation:vertical;e-width.bind:width;e-height.bind:height;e-value.bind:value"></div>
            <span>Default</span>
