--- a/sample/src/samples/editors/Localization.html
+++ b/sample/src/samples/editors/Localization.html
@@ -13,7 +13,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <label>Kilometers</label>
+                                        <label>Numeric Textbox</label>
                                     </td></tr> <tr>
                                     <td>
                                         <input id="numeric" type="text" ej-numeric-textbox="e-value.bind:numericValue;e-locale.bind:localeValue;e-watermark-text.bind:watermark;e-width.bind:cwidth" />
@@ -21,7 +21,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <label>Service Tax</label>
+                                        <label>Percentage Textbox</label>
                                     </td></tr> <tr>
                                     <td>
                                         <input id="percent" type="text" ej-percentage-textbox="e-value.bind:percentValue;e-locale.bind:localeValue;e-watermark-text.bind:watermark;e-width.bind:cwidth" />
@@ -29,12 +29,20 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <label>Fare</label>
+                                        <label>Currency Textbox</label>
                                     </td></tr> <tr>
                                     <td>
                                         <input id="currency" type="text" ej-currency-textbox="e-value.bind:currencyValue;e-locale.bind:localeValue;e-watermark-text.bind:watermark;e-width.bind:cwidth" />
                                     </td>
-                                </tr>                              
+                                </tr>
+								<tr>
+                                    <td>
+                                        <label>MaskEdit</label>
+                                    </td></tr> <tr>
+                                    <td>
+                                        <input id="maskedit" type="text" ej-mask-edit="e-locale.bind:localeValue;e-mask-format.bind:maskFormat;e-width.bind:cwidth" />
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>                      
                     </div>
